--- a/pom.xml
+++ b/pom.xml
@@ -39,4 +39,47 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>2.4</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <artifactSet>
+                <excludes>
+                  <exclude>junit:junit</exclude>
+                  <exclude>org.hamcrest:hamcrest-core</exclude>
+                </excludes>
+              </artifactSet>
+              <!-- switch the Mockito classes to give a binary compatible api -->
+              <relocations>
+                <relocation>
+                <pattern>org.mockito</pattern>
+                <shadedPattern>org.elasticsearch.mock.orig</shadedPattern>
+                <includes>
+                  <include>org.mockito.Mockito</include>
+                </includes>
+                </relocation>
+                <relocation>
+                <pattern>org.elasticsearch.mock</pattern>
+                <shadedPattern>org.mockito</shadedPattern>
+                <includes>
+                  <include>org.elasticsearch.mock.Mockito*</include>
+                </includes>
+                </relocation>
+              </relocations>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+    </plugins>
+  </build>
 </project>
